--- a/source.ipynb
+++ b/source.ipynb
@@ -40,8 +40,7 @@
     "from numpy.fft import fft, ifft, fftfreq\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
-    "\n"
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV"
    ]
   },
   {
